--- a/61_Ritz_Python_Assignment_6.ipynb
+++ b/61_Ritz_Python_Assignment_6.ipynb
@@ -34,21 +34,21 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 2,
       "id": "1c5be985-14ea-4fea-98c9-d2f9e173969a",
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "1c5be985-14ea-4fea-98c9-d2f9e173969a",
-        "outputId": "cbeb7b60-fe24-4abe-8837-436ffa2e28f2"
+        "outputId": "c027ae3b-c968-4518-af1a-42514254c648"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Madhav Prakash Pachakale - SE3/S3/65\n",
+            "Ritesh Somnath Gardare - SE3/S3/61\n",
             "\n",
             "First two rows of the DataFrame:\n",
             "     Name  Age  Salary Department\n",
@@ -98,7 +98,7 @@
         "}\n",
         "\n",
         "df = pd.DataFrame(data)\n",
-        "print('Madhav Prakash Pachakale - SE3/S3/65\\n')\n",
+        "print('Ritesh Somnath Gardare - SE3/S3/61\\n')\n",
         "print(\"First two rows of the DataFrame:\")\n",
         "print(df.head(2))\n",
         "print(\"\\nLast two rows of the DataFrame:\")\n",
